--- a/Aplicacion/Presentacion/Pages/Login/Login.cshtml
+++ b/Aplicacion/Presentacion/Pages/Login/Login.cshtml
@@ -4,6 +4,13 @@
     
 }
 
+<style>
+
+body{
+    background-color: #FFC107;
+    }
+</style>
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
