--- a/Aplicacion/Presentacion/Pages/CrudVideoJuego/Index.cshtml
+++ b/Aplicacion/Presentacion/Pages/CrudVideoJuego/Index.cshtml
@@ -5,10 +5,28 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<style>
+
+body{
+    background-color: #FFC107;
+    }
+.boton_crear{
+    background-color: #2940D3;
+    color: white;
+    font-size: 24px;
+}
+
+.table{
+    width: 110%;
+}
+
+</style>
+
+
+<h1>Sala de juegos</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class="boton_crear">Añadir juegos</a>
 </p>
 <table class="table">
     <thead>
